syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.inet.service";
option java_outer_classname = "GroupProto";

package com.github.inet.service;

import "com/github/inet/entity/Group.proto";

service Group {

  rpc get(GroupGetRequest) returns (GroupGetResponse) {}

  rpc create(GroupCreateRequest) returns (GroupCreateResponse) {}

  rpc update(GroupUpdateRequest) returns (GroupUpdateResponse) {}

  rpc delete(GroupDeleteRequest) returns (GroupDeleteResponse) {}
}

message GroupGetRequest {
  string id = 1;
}

message GroupGetResponse {
  com.github.inet.entity.Group group = 1;
}

message GroupCreateRequest {
  com.github.inet.entity.Group group = 1;
}

message GroupCreateResponse {
}

message GroupUpdateRequest {
  com.github.inet.entity.Group group = 1;
  bool shouldUpsert = 2;
}

message GroupUpdateResponse {
}

message GroupDeleteRequest {
  string id = 1;
}

message GroupDeleteResponse {
}
